--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/emoji.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Billy's Portfolio" />
+    <meta property="og:url" content="https://billy.boo" />
+    <meta property="og:type" content="text/html" />
     <title>Billy's Portfolio</title>
   </head>
   <body>
